# denoise-lung-masks

./: .gitignore  README.md  pyproject.toml  reinstall_package.sh  setup.cfg
data/: preprocess_osic_masks.py
data/osic_fibrosis_masks/: .gitignore  data-info.csv
experiments/analysis/: estimate_volume.py  v0_estimate_volume.sh  v1_estimate_volume.sh  v2_estimate_volume.sh
experiments/denoising-autoencoder/: .gitignore  ae-data-info-2.5mm.csv  ae-data-info-5mm.csv  parameters.py  predict.py  predict_all.sh  train.py  train_all.sh
experiments/util/: view_prediction.py
src/denoise_lung_masks/: __init__.py  autoencoder.py  lung_data_module.py
