# Look at https://setuptools.readthedocs.io/en/latest/references/keywords.html for keywords and their meaning
[metadata]
name = denoise_lung_masks

# Extract version from __version__ defined in __init__.py file
version = attr:denoise_lung_masks.__version__

description = Denoising lung mask experiment
long_description = README.md
long_description_content_type = text/markdown

author = Silas Nyboe Ørting
author_email = silas@di.ku.dk

# Look at https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

license = GNU General Public License v3 or later (GPLv3+)
license_files = LICENSE.txt

platforms = any

[options]
install_requires =
    matplotlib
    monai
    numpy
    pytorch_lightning
    scipy    
    scikit-image
    torch
    torchio
    
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src